# AOC2024-OCAML

./: .gitignore  README.md  dune-project
lib/: advent.ml  dune  nukegraph.ml
